[package]
name = "sondbus-atmega2560"
version = "0.1.0"
authors = ["max"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "sondbus-atmega2560"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0"
avr-device = "0.7.0"
ringbuffer = { version = "0.15.0", default-features = false }
sondbus = { path = "../sondbus" }
embedded-time = "0.12.1"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
#rev = "main"
features = ["arduino-mega2560"]

# The latest releases of `proc-macro2` do not support the rust toolchain that
# we use.  Thus, we must fix this dependency to an older version where our
# toolchain is still supported.  See https://github.com/Rahix/avr-hal/issues/537
[build-dependencies.proc-macro2]
version = "=1.0.79"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
